# sentiment_analysis

./: .gitignore  FIGURES_REGENERATION_REPORT.md  README.md  VISUALIZATION_REFACTORING_SUMMARY.md  app.py  final_report.md  pyproject.toml
app_pages/: about.py  batch_file.py  model_compare.py  single_text.py
data/processed/: binary_test.parquet  binary_train.parquet  binary_val.parquet  emotion_test.parquet  emotion_train.parquet  emotion_val.parquet  summary.json  vocab_binary.json  vocab_emotion.json
data/raw/: test.csv  train.csv  validation.csv
data/samples/: example_texts.csv
outputs/logs/: bert_binary_history.json  bert_binary_probs.npz  bert_binary_report.csv  bert_binary_test.json  bilstm_binary_history.json  bilstm_binary_probs.npz  bilstm_binary_report.csv  bilstm_binary_test.json  bilstm_emotion_history.json  bilstm_emotion_probs.npz  bilstm_emotion_report.csv  bilstm_emotion_test.json  ensemble_probs.npz  ensemble_summary.json  textcnn_binary_history.json  textcnn_binary_probs.npz  textcnn_binary_report.csv  textcnn_binary_test.json
scripts/: 01_download_data.py  02_explore_data.py  02_explore_data_v2.py  03_preprocess.py  03_preprocess_v2.py  04_train_textcnn.py  05_train_bilstm.py  06_train_bert.py  07_fuse_and_compare.py  08_emotion_analysis.py  09_regenerate_all_figures.py  10_regen_train_viz.py  11_regen_compare_viz.py  run_all.py
src/: config.py  inference.py  utils.py  viz.py
src/data/: datasets.py  loader.py  preprocess.py
src/models/: bert_clf.py  bilstm.py  textcnn.py
src/training/: trainer.py  viz_training.py  viz_training_v2.py
