[project]
name = "sentiment-analysis"
version = "0.1.0"
description = "基于社交媒体文本的中文情感分析与抑郁倾向识别系统"
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
    "torch>=2.3.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "huggingface-hub>=0.22.0",
    "tokenizers>=0.15.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26,<2.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "wordcloud>=1.9.3",
    "jieba>=0.42.1",
    "tqdm>=4.66.0",
    "requests>=2.31.0",
    "modelscope>=1.13.0",
    "rich>=13.7.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "openpyxl>=3.1.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
